[package]
name = "bitcoind-rest-api"
version = "0.1.3"
edition = "2021"
description = "Request data from Bitcoind through rest api endpoints"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoind-request = "0.1.16"
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
